<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ranking"
        android:orderInCategory="0"
        android:title="@string/day_ranking" />
    <item
        android:icon="@drawable/like"
        android:orderInCategory="1"
        android:title="@string/guss_you_like" />
    <item
        android:icon="@drawable/function"
        android:orderInCategory="2"
        android:title="@string/function_center" />
    <item
        android:icon="@drawable/update"
        android:orderInCategory="3"
        android:title="@string/follow_the_update" />
    <item
        android:icon="@drawable/personal"
        android:orderInCategory="4"
        android:title="@string/personal_center" />
</menu>